fixing add to cart and options in category cards prices and indexes | fixing alignment issue on cards , change price color to red

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1723,7 +1723,7 @@ figure.card-figure{
 }
 section.productView-details{
     .productView-price{
-        color:var(--Red);
+        color:var(--Black);
     }
 }
 
@@ -2419,5 +2419,23 @@ padding-left:0 !important;
         justify-content: space-between;
         align-items:center;
         width:100%;
+    }
+}
+
+ul.productGrid{
+    display:flex;
+    flex-wrap:wrap;
+    align-items:stretch;
+    li.product{
+        margin-bottom:3rem;
+        article{
+            margin-bottom:0;
+            height:100%;
+            display:flex;
+            flex-direction:column;
+            .container-add-to-cart{
+                margin-top:auto;
+            }
+        }
     }
 }
